fixed menu on mobile
pointer-events property
added privacy and terms sections

--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ button:hover{
     .menu-list{
         overflow: hidden;
         transition: 0.5s;
+        pointer-events: none;
     }
 
     .menu-list ul li a{
